Fix alignment in footer page

--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -6,7 +6,7 @@
   width: 80%;
   height: 30vh;
   display: flex;
-  justify-content: center;
+  flex-direction: row;
   color: #fff;
   flex-wrap: wrap;
   margin: 0 auto;
@@ -14,6 +14,7 @@
 
 .footer-title {
   display: flex;
+  flex: 2;
   flex-direction: column;
   margin-top: 2rem;
 }
@@ -28,12 +29,19 @@
   color: orange;
 }
 
+.use-left {
+  display: flex;
+  margin: 0px;
+}
+
+.right-a-bit {
+  padding-left: 30px;
+}
+
 .footer .nav-logo {
   margin: auto;
 }
-// need to get the logo to be centered correctly
-// .nav-logo {
-//   display: flex;
-//   align-items: right;
-//   justify-content: right;
-// }
+
+.nav-logo-right {
+  flex: 0;
+}
